--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=JWT
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/jwt
+spring.datasource.username = postgres
+spring.datasource.password = your_password
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.show-sql = true
